Added an 'icebox' why not

--- a/03_31_2015.org
+++ b/03_31_2015.org
@@ -1,6 +1,5 @@
-
-* TODO Launch data-template to hackage
-* TODO move table definitions to cobalt backend
+* DONE Launch data-template to hackage
+* DONE move table definitions to cobalt backend
 * TODO consolodate to uuid package only!
 * TODO get c# migration server running
 * TODO get c# migration client started
