The UUID problem (multiple packages producing UUID type.  Is unsurprisingly harder to solve than it first appears

--- a/today.org
+++ b/today.org
@@ -1,6 +1,5 @@
 
 * TODO Get ghcjs 
 
-* TODO Create
 * TODO write an overview of the ghcjs stuff from Kevin
-* TODO Start the process of adding schema to the cobalt 
+* TODO Start the process of adding schema to the cobalt *
