Must have missed some stuff

--- a/today.org
+++ b/today.org
@@ -1,5 +1,5 @@
 * TODO Start the process of adding schema to the cobalt *
-  CLOCK: [2015-04-10 Fri 00:00]
+  CLOCK: [2015-04-10 Fri 00:00]--[2015-04-10 Fri 00:01] =>  0:01
 * TODO Get ghcjs 
 
 * TODO write an overview of the ghcjs stuff from Kevin
