--- a/today.org
+++ b/today.org
@@ -1,6 +1,8 @@
-* TODO Start the process of adding schema to the cobalt *
-  CLOCK: [2015-04-10 Fri 00:00]--[2015-04-10 Fri 00:01] =>  0:01
+* DONE Pick up mali
+* TODO Go by bank
+* DONE Look over netsuite stuff
+* DONE Start the process of adding schema to the cobalt *
 * TODO Get ghcjs 
-
-* TODO write an overview of the ghcjs stuff from Kevin
+  
+* DONE write an overview of the ghcjs stuff from Kevin
  
