Updated todo progress for 04_14

--- a/04_14_2015.org
+++ b/04_14_2015.org
@@ -1,7 +1,7 @@
 
-* TODO Talk to James about edit mode 
+* DONE Talk to James about edit mode 
 
-* TODO Move date format to data-template
+* DONE Move date format to data-template
 
 * TODO Get ghcjs 
   
