--- a/icebox.org
+++ b/icebox.org
@@ -1,19 +1,21 @@
 * TODO write tests for form-template (including new date stuff)
   CLOCK: [2015-04-15 Wed 09:05]--[2015-04-15 Wed 10:19] =>  1:14
-
-* TODO update data-template
-
+* TODO Finish Writing Spot Server
+** Look in issues for features needed  
+* TODO Look over goals and see what progress we have made.  
+* TODO update data-template 
+* TODO 
 * TODO write tests for data-template
 
 * TODO Get reports configured with an email option 
 
-* TODO Look over Jennifer Walkers stuff
-  CLOCK: [2015-04-15 Wed 10:24]--[2015-04-15 Wed 10:31] =>  0:07
 * TODO Look over Steve's stuff
+** I sent this off for Daniel to look for
+   
+* TODO rename filterDataTemplateEntry
 
+** TODO I need to investigate why this was needed soon                 :what:
 * TODO extract permissions
 ** This turned out to be an unwise thing for now  
-* TODO More Automation for tish report
-* TODO rename filterDataTemplateEntry
 * TODO Add broadcast handling
-* DONE Get ghcjs 
+* TODO More Automation for tish report
