--- a/today.org
+++ b/today.org
@@ -1,3 +1,5 @@
+
+* TODO Finish labeling issues 
 * TODO Look over Jennifer Walkers stuff
   CLOCK: [2015-04-15 Wed 10:24]--[2015-04-15 Wed 10:31] =>  0:07
 * TODO Look over netsuite
