--- a/today.org
+++ b/today.org
@@ -1,5 +1,7 @@
-
-* TODO Finish labeling issues 
+* DONE Finish labeling issues 
+  CLOCK: [2015-05-04 Mon 13:28]--[2015-05-04 Mon 14:02] =>  0:34
+* DONE Add 'Cleanup' label (can't believe I missed it)
+* TODO Finish getting mass issue thing ready
 * TODO Look over Jennifer Walkers stuff
   CLOCK: [2015-04-15 Wed 10:24]--[2015-04-15 Wed 10:31] =>  0:07
 * TODO Look over netsuite
