--- a/icebox.org
+++ b/icebox.org
@@ -1,5 +1,6 @@
 * TODO write tests for form-template (including new date stuff)
   CLOCK: [2015-04-15 Wed 09:05]--[2015-04-15 Wed 10:19] =>  1:14
+* TODO Add Done to issue-add
 * TODO Finish Writing Spot Server
 ** Look in issues for features needed  
 * TODO Look over goals and see what progress we have made.  
