--- a/today.org
+++ b/today.org
@@ -1,5 +1,8 @@
+* Fix service.aacs-us.com
+  CLOCK: [2015-05-07 Thu 10:58]
 * TODO David Baldwin
-* TODO Look up camera pricing 
+* DONE Look up camera pricing 
+  CLOCK: [2015-05-07 Thu 08:55]--[2015-05-07 Thu 10:58] =>  2:03
   CLOCK: [2015-05-06 Wed 14:38]--[2015-05-06 Wed 14:48] =>  0:10
   CLOCK: [2015-05-06 Wed 11:26]--[2015-05-06 Wed 11:35] =>  0:09
 * TODO Finish getting mass issue thing ready
