--- a/05_09_2015.org
+++ b/05_09_2015.org
@@ -42,7 +42,7 @@
 
 ** TODO Per foot price on Cable
 
-* DONE Fix service.aacs-us.com
+* Fix service.aacs-us.com
   CLOCK: [2015-05-07 Thu 10:58]--[2015-05-07 Thu 11:35] =>  0:37
 * DONE Try and build new 2013 with old 2010
   CLOCK: [2015-05-06 Wed 14:48]--[2015-05-06 Wed 14:48] =>  0:00
