--- a/icebox.org
+++ b/icebox.org
@@ -2,7 +2,9 @@
   CLOCK: [2015-04-15 Wed 09:05]--[2015-04-15 Wed 10:19] =>  1:14
 
 
-
+* TODO Look over Jennifer Walkers stuff
+  CLOCK: [2015-04-15 Wed 10:24]--[2015-04-15 Wed 10:31] =>  0:07
+   
 * TODO Finish Writing Spot Server
 ** Look in issues for features needed  
 
@@ -24,4 +26,5 @@
 * TODO Add broadcast handling
 
 * TODO More Automation for tish report
-
+* TODO Look over contract 
+* TODO Check that Modbus TCP is good
