--- a/intern_icebox.org
+++ b/intern_icebox.org
@@ -1,4 +1,7 @@
 * TODO Automated parsing and rendering of Panel View
+** Michael Starting on this   
 * TODO Get reports configured with an email option 
 * TODO Stakeout project re-initiation 
 * TODO Sandbox configured
+* TODO Intern Bugs
+
