--- a/05_20_2015.org
+++ b/05_20_2015.org
@@ -1,10 +1,3 @@
-
-* TODO fix circle CI build for cobalt-kiosk
-  CLOCK: [2015-05-21 Thu 09:23]--[2015-05-21 Thu 09:24] =>  0:01
-
-* TODO Add button 'all-reports' for onping kiosk
-
-* TODO Fix dependency problems in onping (again)
 * TODO Get with James about testing the report fixtures
 * TODO Gather all quote info into a real quote
   CLOCK: [2015-05-19 Tue 11:17]--[2015-05-19 Tue 14:07] =>  2:50
@@ -12,4 +5,4 @@
   CLOCK: [2015-05-19 Tue 15:34]--[2015-05-19 Tue 16:28] =>  0:54
   I put a hold on this until I get things in proper condition to actually add the report and driver info
 
-
+* Christ the King Catholic Church
