--- a/05_28_2015.org
+++ b/05_28_2015.org
@@ -21,5 +21,7 @@
 
 * TODO Cobalt Form Features and Tasks
 ** DONE Get correct input types parsing from xml
+* DONE write tests for form-template (including new date stuff)
+  CLOCK: [2015-04-15 Wed 09:05]--[2015-04-15 Wed 10:19] =>  1:14   
 ** TODO Add some way of culling fields unwanted for display
 ** TODO Add some form of type to prepare an invoice
