--- a/today.org
+++ b/today.org
@@ -1,10 +1,6 @@
 * TODO Call about a credit card
 * TODO Gather all quote info into a real quote
   CLOCK: [2015-05-19 Tue 11:17]--[2015-05-19 Tue 14:07] =>  2:50
-* TODO Review MSA 
-  CLOCK: [2015-05-28 Thu 11:45]--[2015-05-28 Thu 11:45] =>  0:00
-** TODO Understand Insurance
-** TODO Understand Intellectual Property   
 * TODO Review Alarm DB Code  
 ** TODO Is AlarmDB staging using folding alarms   
 ** DONE Why is the staging version not calling out 
@@ -17,6 +13,12 @@
 ** TODO Add some way of culling fields unwanted for display
 ** TODO Add excel spreadsheet output
 ** TODO Add some form of type to prepare an invoice
+* DONE Review MSA 
+  CLOCK: [2015-05-28 Thu 11:45]--[2015-05-28 Thu 11:45] =>  0:00
+** DONE Understand Insurance
+Insurance requirements are fine   
+** DONE Understand Intellectual Property
+I need to look at editing this with an onping-terms-of-service agreement   
 * DONE Review server info
 I Think I want the E2000 server system  
 * DONE update data-template
