--- a/05_28_2015.org
+++ b/05_28_2015.org
@@ -1,27 +1,36 @@
-* TODO Finish render Heading in issue-add
-  CLOCK: [2015-05-23 Sat 00:05]--[2015-05-23 Sat 00:25] =>  0:20
-** TODO Render section
-   CLOCK: [2015-05-23 Sat 00:25]--[2015-05-23 Sat 00:35] =>  0:10
+* TODO Call about a credit card
 * TODO Gather all quote info into a real quote
   CLOCK: [2015-05-19 Tue 11:17]--[2015-05-19 Tue 14:07] =>  2:50
-* TODO Furnish Steve his quote
-  CLOCK: [2015-05-19 Tue 15:34]--[2015-05-19 Tue 16:28] =>  0:54
-  I put a hold on this until I get things in proper condition to actually add the report and driver info
-
-* TODO Figure out projects for Darren
-** TODO Sandbox minimal build
-** TODO Saucelabs project ??
-
+* TODO Review Alarm DB Code  
+** TODO Is AlarmDB staging using folding alarms   
+** DONE Why is the staging version not calling out 
+   CLOCK: [2015-05-28 Thu 20:03]--[2015-05-28 Thu 20:03] =>  0:00
+   CLOCK: [2015-05-28 Thu 13:37]--[2015-05-28 Thu 14:37] =>  1:00
+   CLOCK: [2015-05-28 Thu 11:48]--[2015-05-28 Thu 13:37] =>  1:49
+   AlarmDB node config needs to be fixed   
 * TODO Fix cobalt kiosk backend to use forms for indexing
-** TODO fix input-type thing
+* TODO Cobalt Form Features and Tasks
+** TODO Add some way of culling fields unwanted for display
+** TODO Add excel spreadsheet output
+** TODO Add some form of type to prepare an invoice
+* DONE Review MSA 
+  CLOCK: [2015-05-28 Thu 11:45]--[2015-05-28 Thu 11:45] =>  0:00
+** DONE Understand Insurance
+Insurance requirements are fine   
+** DONE Understand Intellectual Property
+I need to look at editing this with an onping-terms-of-service agreement   
+* DONE Review server info
+I Think I want the E2000 server system  
+* DONE update data-template
+** DONE write tests for data-template
+I didn't really write any new tests, but did make sure the ones that there seemed adequate   
+** DONE Make sure data-template works with all the new Form stuff
+   CLOCK: [2015-05-28 Thu 20:07]--[2015-05-28 Thu 20:07] =>  0:00
+* DONE fix input-type  
    CLOCK: [2015-05-28 Thu 01:12]--[2015-05-28 Thu 01:12] =>  0:00
    CLOCK: [2015-05-26 Tue 20:47]--[2015-05-27 Wed 06:47] => 10:00
    CLOCK: [2015-05-25 Mon 23:22]--[2015-05-25 Mon 23:52] =>  0:30
-
-
-* TODO Cobalt Form Features and Tasks
-** DONE Get correct input types parsing from xml
-* DONE write tests for form-template (including new date stuff)
-  CLOCK: [2015-04-15 Wed 09:05]--[2015-04-15 Wed 10:19] =>  1:14   
-** TODO Add some way of culling fields unwanted for display
-** TODO Add some form of type to prepare an invoice
+At the point I am sitting around goin what is the input type thing...   
+* DONE Figure out projects for Darren
+Spot Report Project
+* DONE Why aren't angular widgets
