--- a/2015_06_04.org
+++ b/2015_06_04.org
@@ -1,6 +1,6 @@
-* TODO Look over Edwards code
+* DONE Look over Edwards code
   CLOCK: [2015-05-30 Sat 20:33]--[2015-05-30 Sat 20:33] =>  0:00
-* TODO Prepare all Contraption info
+* DONE Prepare all Contraption info
 * TODO Cobalt Form Features and Tasks
 ** TODO Add some way of culling fields unwanted for display
 ** TODO Add excel spreadsheet output
