--- a/today.org
+++ b/today.org
@@ -1,4 +1,17 @@
-* TODO MODBUS on IPAD
-* DONE Template system on cobalt backend
-  CLOCK: [2015-06-15 Mon 15:34]
-  Template system now builds 'all companies' report
+
+* TODO Contact Insurance Company
+
+** TODO Find out what difference whose fault it is makes.
+
+
+* TODO Contact Netsuite, ask them to fix
+** Search problem
+We can't find a way to set up parts to search easily by description
+** Workflow
+When we talked about our workflow before I had mentioned wanting to
+create a trail for a part but I am not sure how to do it right now.
+** Tickets
+We have to be able to separate the parts portion of the ticket from the
+labor portion in order to hand this to customers.
+
+
