Today stuff updated

--- a/2015_06_22.org
+++ b/2015_06_22.org
@@ -14,3 +14,13 @@ labor portion in order to hand this to customers.
 * TODO Update on stakeout
 
 * TODO Folds alarms
+* DONE Contact Insurance Company
+
+** DONE Find out what difference whose fault it is makes.
+
+* DONE Create Elance invoice for Mujahid
+
+* DONE Talk with Tobi about Alex install
+
+* DONE FInd out if Sam got truck towed
+
