--- a/today.org
+++ b/today.org
@@ -1,19 +1,3 @@
-
-* TODO Contact Rein
-* TODO make new companies for cobalt
-
-* TODO update patrick
-* TODO Contact Netsuite, ask them to fix
-** Search problem
-We can't find a way to set up parts to search easily by description
-** Workflow
-When we talked about our workflow before I had mentioned wanting to
-create a trail for a part but I am not sure how to do it right now.
-** Tickets
-We have to be able to separate the parts portion of the ticket from the
-labor portion in order to hand this to customers.
-* TODO Get update on QuickBooks stuff
-
-* TODO Update on stakeout
-
-* TODO Folds alarms
+* TODO Look over questions for Cassie
+* TODO Get an answer from Midstates
+* TODO Figure out why C# driver is sending bs values
