--- a/chad.org
+++ b/chad.org
@@ -1,5 +1,4 @@
-* Hot
-  
+* Hot  
 ** TODO Get tax for Indiana 
 ** TODO Badger
 *** TODO ARP
@@ -12,17 +11,31 @@
     CLOCK: [2015-08-10 Mon 08:26]--[2015-08-10 Mon 08:27] =>  0:01
 + call
 *** TODO Tish    
-** DONE First of the month Data For Kirstin
 ** TODO James, Ticket and Air b&b
    CLOCK: [2015-08-10 Mon 08:21]--[2015-08-10 Mon 08:21] =>  0:00
 First place never responded, try again today 
+
+** TODO Go through expenses
+
+*** Sam 
    
+*** Tobi Yes
+
+*** Junior Yes
+
+*** Shane Yes
+
+*** Tyler
+
+*** Brad
+
+*** Andrew 
+    
+*** Matt 
+
 * Cold
 
-** DONE Register for conference
-
 ** TODO Get Sales Tax set up Texas and Kansas
-
 
 ** TODO Vin # and Tag # 
 Tobi is the only one left
@@ -34,3 +47,5 @@ Tobi is the only one left
 ** TODO Sell Truck
 
 ** TODO Neosho Collections
+
+** TODO Personal Financial statements
