--- a/scott.org
+++ b/scott.org
@@ -1,14 +1,15 @@
 * Hot
+** TODO Redo ad for field service to more obviously emphasize elect.
 ** TODO Finish Alarms
    CLOCK: [2015-08-07 Fri 09:33]--[2015-08-10 Mon 08:21] => 70:48
-** TODO Find out about setting up a user agreement for onping
 ** TODO Netsuite
-** TODO Check with Steve about payment
+** DONE Check with Steve about payment
 ** TODO Notary thing   
-** TODO Get Tag for Brad
-** TODO look over onping onboarding stuff that james wrote
-** TODO Redo ad for field service to more obviously emphasize elect.
+** DONE Get Tag for Brad
+** DONE look over onping onboarding stuff that james wrote   
 * Cold
+** TODO Find out about setting up a user agreement for onping
+Waiting on Steve to get back with me  
 ** TODO Masks need to be separated from persist-mongo-template
 ** TODO Mask default code needs an overhaul with documentation
 ** TODO Auth piece for servant implemented in something
