--- a/chad.org
+++ b/chad.org
@@ -1,51 +1,38 @@
 * Hot  
 ** TODO Get tax for Indiana 
+** TODO Continental Broken
 ** TODO Badger
 *** TODO ARP
+    CLOCK: [2015-08-11 Tue 09:06]--[2015-08-11 Tue 09:06] =>  0:00
     CLOCK: [2015-08-10 Mon 08:26]--[2015-08-10 Mon 08:26] =>  0:00
 + Calling ARP
 *** TODO Concord
     CLOCK: [2015-08-10 Mon 08:26]--[2015-08-10 Mon 08:26] =>  0:00
 + Waiting for email    
 *** TODO Range  
+    SCHEDULED: <2015-08-18 Tue>
+    Check up 
     CLOCK: [2015-08-10 Mon 08:26]--[2015-08-10 Mon 08:27] =>  0:01
 + call
++ should be paid out in a few days
 *** TODO Tish    
-** TODO James, Ticket and Air b&b
-   CLOCK: [2015-08-10 Mon 08:21]--[2015-08-10 Mon 08:21] =>  0:00
-First place never responded, try again today 
 
-** TODO Go through expenses
-
-*** Sam 
-   
-*** Tobi Yes
-
-*** Junior Yes
-
-*** Shane Yes
-
-*** Tyler
-
-*** Brad
-
-*** Andrew 
-    
-*** Matt 
-
+** TODO Tag Renewal
 * Cold
+** TODO Call At&t back
+   SCHEDULED: <2015-08-18 Tue>
+   Said we would call back next week to check on this.
+
+** TODO James, Ticket and Air b&b
+   CLOCK: [2015-08-11 Tue 09:08]--[2015-08-11 Tue 09:08] =>  0:00
+   CLOCK: [2015-08-10 Mon 08:21]--[2015-08-10 Mon 08:21] =>  0:00
++ First place never responded, try again today 
 
 ** TODO Get Sales Tax set up Texas and Kansas
-
 ** TODO Vin # and Tag # 
 Tobi is the only one left
-
 ** TODO Find Rental In Lindsay
-
 ** TODO Sep IRA hassel people
-
 ** TODO Sell Truck
-
 ** TODO Neosho Collections
-
 ** TODO Personal Financial statements
