--- a/scott.org
+++ b/scott.org
@@ -1,27 +1,34 @@
-* Hot
-** TODO Redo ad for field service to more obviously emphasize elect.
-** TODO Parts Delivery Ad
-** TODO Finish Alarms
-   CLOCK: [2015-08-07 Fri 09:33]--[2015-08-10 Mon 08:21] => 70:48
+* ALL TODO
+** Hot
+*** TODO Finish Alarms
+    CLOCK: [2015-08-07 Fri 09:33]--[2015-08-10 Mon 08:21] => 70:48
+*** DONE MSA look
+*** DONE Notary thing   
+*** TODO Redo ad for field service to more obviously emphasize elect.
+*** TODO Netsuite
+*** TODO Enter Tims Request
++ Call Order Interface Change
++ Alarm Call Route and Location Assignment screen
 
-** TODO Netsuite
-** TODO Notary thing   
-* Cold
-** TODO Find out about setting up a user agreement for onping
+*** TODO Tag Report for Tim
+*** TODO Total Flow 
+
+** Cold
+*** TODO Find out about setting up a user agreement for onping
 Waiting on Steve to get back with me  
-** TODO Masks need to be separated from persist-mongo-template
-** TODO Mask default code needs an overhaul with documentation
-** TODO Auth piece for servant implemented in something
-** TODO Better answer for authentication
-** TODO Find out about setting up a user agreement for onping
-** TODO Fix cobalt kiosk backend to use forms for indexing
-** TODO rename filterDataTemplateEntry
-*** TODO I need to investigate why this was needed soon                :what:
-** TODO extract permissions
-*** This turned out to be an unwise thing for now  
-** TODO Add broadcast handling
-** TODO More Automation for tish report
-** TODO Finish render Heading in issue-add
-   CLOCK: [2015-05-23 Sat 00:05]--[2015-05-23 Sat 00:25] =>  0:20
-*** TODO Render section
-    CLOCK: [2015-05-23 Sat 00:25]--[2015-05-23 Sat 00:35] =>  0:10
+*** TODO Masks need to be separated from persist-mongo-template
+*** TODO Mask default code needs an overhaul with documentation
+*** TODO Auth piece for servant implemented in something
+*** TODO Better answer for authentication
+*** TODO Find out about setting up a user agreement for onping
+*** TODO Fix cobalt kiosk backend to use forms for indexing
+*** TODO rename filterDataTemplateEntry
+**** TODO I need to investigate why this was needed soon               :what:
+*** TODO extract permissions
+**** This turned out to be an unwise thing for now  
+*** TODO Add broadcast handling
+*** TODO More Automation for tish report
+*** TODO Finish render Heading in issue-add
+    CLOCK: [2015-05-23 Sat 00:05]--[2015-05-23 Sat 00:25] =>  0:20
+**** TODO Render section
+     CLOCK: [2015-05-23 Sat 00:25]--[2015-05-23 Sat 00:35] =>  0:10
